[project]
name = "real-time-web-detection"
version = "0.1.0"
description = ""
authors = [
    {name = "medmaamar1",email = "maamarm46@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "fastapi (>=0.117.1,<0.118.0)",
    "uvicorn (>=0.36.0,<0.37.0)",
    "streamlit (>=1.49.1,<2.0.0)"
]

packages = [
    { include = "real_time_web_detection" }
]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
